[gd_scene load_steps=8 format=3 uid="uid://bgo8wfas032rd"]

[ext_resource type="Script" uid="uid://cmaq8wflhw7pe" path="res://script/05_size.gd" id="1_60qh1"]
[ext_resource type="Texture2D" uid="uid://b75wp5gb23ljy" path="res://texture/x.png" id="2_asdjf"]
[ext_resource type="Texture2D" uid="uid://d1tnmt64xpp4k" path="res://texture/0_5size.png" id="3_rs80w"]
[ext_resource type="Texture2D" uid="uid://b2gqkpv3ike7r" path="res://texture/2_size.png" id="4_s0u08"]
[ext_resource type="Texture2D" uid="uid://c67p354ytqkun" path="res://texture/normal_size.png" id="5_voccs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qo1b0"]
size = Vector2(39, 23)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_mnqfa"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 2

[node name="Area2D" type="Area2D"]
script = ExtResource("1_60qh1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(7.5, 0)
shape = SubResource("RectangleShape2D_qo1b0")

[node name="X2" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.32549)
position = Vector2(21, 5)
scale = Vector2(0.515625, 0.515625)
texture = ExtResource("2_asdjf")

[node name="X" type="Sprite2D" parent="."]
position = Vector2(20, 4)
scale = Vector2(0.515625, 0.515625)
texture = ExtResource("2_asdjf")

[node name="05Size2" type="Sprite2D" parent="."]
visible = false
modulate = Color(0, 0, 0, 0.368627)
position = Vector2(1, 1)
scale = Vector2(0.84375, 0.84375)
texture = ExtResource("3_rs80w")

[node name="05Size" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 1)
scale = Vector2(0.84375, 0.84375)
texture = ExtResource("3_rs80w")

[node name="2Size2" type="Sprite2D" parent="."]
visible = false
modulate = Color(0, 0, 0, 0.231373)
position = Vector2(8, 1)
scale = Vector2(0.78125, 0.806452)
texture = ExtResource("4_s0u08")

[node name="2Size" type="Sprite2D" parent="."]
visible = false
position = Vector2(6, 1)
scale = Vector2(0.78125, 0.806452)
texture = ExtResource("4_s0u08")

[node name="NormalSize2" type="Sprite2D" parent="."]
visible = false
modulate = Color(0, 0, 0, 0.203922)
position = Vector2(11, 0)
scale = Vector2(0.78125, 0.78125)
texture = ExtResource("5_voccs")

[node name="NormalSize" type="Sprite2D" parent="."]
visible = false
position = Vector2(10, -1)
scale = Vector2(0.78125, 0.78125)
texture = ExtResource("5_voccs")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_mnqfa")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
